# asan_examples

./: CMakeLists.txt  run.sh
alloc-dealloc-mismatch/: example1.cpp
allocation-size-too-big/: example1.cpp
calloc-overflow/: example1.cpp
container-overflow/: example1.cpp
double-free/: example1.cpp  example2.cpp
dynamic-stack-buffer-overflow/: example1.cpp  example2.cpp  example3.cpp
heap-buffer-overflow/: example1.cpp  example2.cpp  example3.cpp
heap-use-after-free/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
invalid-allocation-alignment/: example1.cpp
memcpy-param-overlap/: example1.cpp
memory-leak/: example1.cpp  example2.cpp
new-delete-type-mismatch/: example1.cpp
stack-buffer-overflow/: example1.cpp  example2.cpp
stack-buffer-underflow/: example1.cpp  example2.cpp
stack-use-after-return/: example1.cpp
stack-use-after-scope/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
strncat-param-overlap/: example1.cpp
use-after-poison/: example1.cpp
